background and icon added

--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class = background lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +16,7 @@
     </div>
 
     <div class="h1container">
-        <h1>for projects</h1> 
+        <h1>for projects in workflow</h1> 
         <h1 class="moving">;</h1>
     </div>
 
