--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class = background lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/Keyboard.ico">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
@@ -13,11 +14,16 @@
         <a href= "about.html">About Me</a>
         <a href= "projects.html">Projects</a>
         <a href= "contact.html">Contact Info</a>
-
     </div>
+
     <div class="h1container">
         <h1>const Daniel_Green = "Software Developer"</h1> 
         <h1 class="moving">;</h1>
+    </div>
+
+    <div class="h2container">
+        <h2>Current Status:</h2> 
+        <h2 id="status">Open To Work </h2>
     </div>
 
     <div id="code-image-text">
