project minsweeper added

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,26 @@
         <h1 class="moving">;</h1>
     </div>
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A accusamus explicabo cupiditate expedita modi ipsam consequatur odit aspernatur mollitia. Odit distinctio delectus veniam unde porro pariatur a incidunt totam voluptates quas quae illum adipisci doloribus ullam autem fugit deleniti, alias qui! Voluptatem expedita omnis hic maxime cum minus praesentium corrupti consectetur ab modi sequi laboriosam provident blanditiis, dolores ipsa, quod commodi voluptate adipisci alias? Facere minima nobis, culpa quisquam nostrum unde earum sequi officiis, quidem fuga modi non dolor! Eligendi tempore dicta impedit excepturi, consequatur voluptatum numquam, ratione, doloremque cumque magni voluptates voluptatem culpa natus iusto corrupti. Repudiandae, obcaecati commodi.</p>
+    <div id="mine-image-text">
+        <img id="mine-bad-image" src="\Images\bad_minesweeper.bmp" alt = "Poorly crafted minesweeper">
+        <div class = spaced-paras>
+            <h3>Minesweeper</h3>
+            <p>After creating a text based game, I wanted to create something with some improved visuals. So I found an instructional video on creating the windows minesweeper game using the module pygame.<br> 
+            <br>
+            I followed along, and was able to replicate the instructor's version of minesweeper, including the array that allowed mines to appear in random places, and the user interface; that upon clicking the correct square, would allow the corresponding image of what was “underneath” to appear.<br>
+            <br>
+            The instructor however left the game in an unfinished state, although there was a timer; there was no victory condition, there was no counter for the mines you had found, and there was a bug which showed any nearby mines upon the first click.
+            </p>
+            <br>
+            <p>Even though I was completely new to pygame; I built upon what I had learned and kept working on the project. I added a mine counter, four levels of difficulty (each with a different number of squares and mines), improved the visuals, and added a victory condition which was met when you had correctly marked out all of the mines on the level. <br>
+            <br>
+            I also built on the mine marking right click function, and added a secondary click that mark a square as a “question mark” rather than a mine, which you could not accidentally click without first removing the mark. <br>
+            <br>
+            This project really showcased how I can pick up new skills quickly, look at problems that are still to be overcome and find creative solutions in order to solve them.
+            </p>
+        </div>
+        <img id="mine-good-image" src="\Images\good_minesweeper.bmp" alt = "Well crafted minesweeper">
+    </div>
 
     <div class = next-previous>
         <a href="about.html"> <button class = "buttons" type="button">&lt=</button> </a>
