--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/Keyboard.ico">
     <link rel="stylesheet" href="style.css">
     <title>Projects</title>
 </head>
@@ -39,6 +40,24 @@
             </p>
         </div>
         <img id="mine-good-image" src="\Images\good_minesweeper.bmp" alt = "Well crafted minesweeper">
+    </div>
+
+    <div id="shadow-image-text">
+        <img id="shadow-char-image" src="\Images\shadow_realm_char.bmp" alt = "Character sheet of Shawdow Realm game">
+        <div class = spaced-paras>
+            <h3>Shadow Realm</h3>
+            <p>After completing an introductory course on Python, I was eager to test out my new found skills and create a text based game with greater scope than I had previously.<br> 
+            <br>
+            And so Shadow Realm was born; a fantasy RPG with character creation, inventory systems, and 75 levels of differing enemy types, designed using ACCII art.<br>
+            </p>
+            <p>       
+            <br>
+            Such was the scope of this game that I planned it all out in detail before beginning the project, testing out each of the functions in a small scale before implementing it. <br>
+            <br>
+            Ultimately it lies unfinished, as I decided to move on to more complex systems, but building what I did of Shadow Realm taught me a lot about how different systems within Python interact.
+            </p>
+        </div>
+        <img id="shadow-battle-image" src="\Images\shadow_realm_battle.bmp" alt = "Battle screen of Shawdow Realm game">
     </div>
 
     <div class = next-previous>
