drum beat project added

--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,24 @@
         <h1 class="moving">;</h1>
     </div>
 
+    <div id="shadow-image-text">
+        <img id="shadow-char-image" src="\Images\shadow_realm_char.bmp" alt = "Character sheet of Shawdow Realm game">
+        <div class = spaced-paras>
+            <h3>Shadow Realm</h3>
+            <p>After completing an introductory course on Python, I was eager to test out my new found skills and create a text based game with greater scope than I had previously.<br> 
+            <br>
+            And so Shadow Realm was born; a fantasy RPG with character creation, inventory systems, and 75 levels of differing enemy types, designed using ACCII art.<br>
+            </p>
+            <p>       
+            <br>
+            Such was the scope of this game that I planned it all out in detail before beginning the project, testing out each of the functions in a small scale before implementing it. <br>
+            <br>
+            Ultimately it lies unfinished, as I decided to move on to more complex systems, but building what I did of Shadow Realm taught me a lot about how different systems within Python interact.
+            </p>
+        </div>
+        <img id="shadow-battle-image" src="\Images\shadow_realm_battle.bmp" alt = "Battle screen of Shawdow Realm game">
+    </div>
+
     <div id="mine-image-text">
         <img id="mine-bad-image" src="\Images\bad_minesweeper.bmp" alt = "Poorly crafted minesweeper">
         <div class = spaced-paras>
@@ -42,22 +60,20 @@
         <img id="mine-good-image" src="\Images\good_minesweeper.bmp" alt = "Well crafted minesweeper">
     </div>
 
-    <div id="shadow-image-text">
-        <img id="shadow-char-image" src="\Images\shadow_realm_char.bmp" alt = "Character sheet of Shawdow Realm game">
+    <div id="beat-image-text">
+        <img id="beat-main-image" src="\Images\drum_beat.bmp" alt = "Main screen of drum beat app">
         <div class = spaced-paras>
-            <h3>Shadow Realm</h3>
-            <p>After completing an introductory course on Python, I was eager to test out my new found skills and create a text based game with greater scope than I had previously.<br> 
+            <h3>Drum Beat App</h3>
+            <p>Not wanting to focus entirely on games and also wanting to bring some sound into my projects; a beat maker app seemed like the next logical step.<br> 
             <br>
-            And so Shadow Realm was born; a fantasy RPG with character creation, inventory systems, and 75 levels of differing enemy types, designed using ACCII art.<br>
+            Again I watched a video and coded along with an instructor, so most of what you see is not my original code.<br>
             </p>
             <p>       
             <br>
-            Such was the scope of this game that I planned it all out in detail before beginning the project, testing out each of the functions in a small scale before implementing it. <br>
-            <br>
-            Ultimately it lies unfinished, as I decided to move on to more complex systems, but building what I did of Shadow Realm taught me a lot about how different systems within Python interact.
+            However I learned lots of new skills by completing this project, including saving and loading data to an outside file, creating a none static image and of course introducing some sounds to the program. <br>
             </p>
         </div>
-        <img id="shadow-battle-image" src="\Images\shadow_realm_battle.bmp" alt = "Battle screen of Shawdow Realm game">
+        <img id="beat-menu-image" src="\Images\drum_menu.bmp" alt = "Menu screen of drum beat app">
     </div>
 
     <div class = next-previous>
