Languages added on index

--- a/contact.html
+++ b/contact.html
@@ -21,22 +21,21 @@
         <h1 class="moving">;</h1>
     </div>
 
+    <p id="cont-para">If you are interested in my work and would like to get in touch, feel free to e-mail me or find me on Linkedin or GitHub. </p>
+
     <div id="contact-list">
-        <div id="google-text">
+        <div class = "contacts-text">
             <img id="google-image" src="\Images\google-mail.webp" alt = "Google Mail">
             <a class="links" href=mailto:dgreen815@gmail.com>dgreen815@gmail.com</a>
         </div>
-        <div id="linkedin-text">
+        <div class = "contacts-text">
             <img id="linkedin-image" src="\Images\linkedin.png" alt = "Linkedin">
             <a class="links" href="https://www.linkedin.com/in/daniel-green-manchester/" target="_blank" >Daniel Green Manchester</a>
         </div>
-        <div id="github-text">
+        <div class = "contacts-text">
             <img id="github-image" src="\Images\github.png" alt = "GitHub">
             <a class="links" href="https://github.com/DanoCrisis" target="_blank" >DanoCrisis</a>
         </div>
-
-
-
     </div>
 
     <div class = next-previous>
