--- a/index.html
+++ b/index.html
@@ -26,9 +26,41 @@
         <h2 id="status">Open To Work </h2>
     </div>
 
-    <div id="code-image-text">
-        <img id="code-image" src="\Images\cool-code.jpg" alt = "Coloured code on a curved computer screen">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A accusamus explicabo cupiditate expedita modi ipsam consequatur odit aspernatur mollitia. Odit distinctio delectus veniam unde porro pariatur a incidunt totam voluptates quas quae illum adipisci doloribus ullam autem fugit deleniti, alias qui! Voluptatem expedita omnis hic maxime cum minus praesentium corrupti consectetur ab modi sequi laboriosam provident blanditiis, dolores ipsa, quod commodi voluptate adipisci alias? Facere minima nobis, culpa quisquam nostrum unde earum sequi officiis, quidem fuga modi non dolor! Eligendi tempore dicta impedit excepturi, consequatur voluptatum numquam, ratione, doloremque cumque magni voluptates voluptatem culpa natus iusto corrupti. Repudiandae, obcaecati commodi.</p>
+    <div class = "image-text">
+        <img id="code-image" src="\Images\cool-code.jpg" alt = "Coloured code on a curved computer screen"> 
+        <div>
+            <h3>Languages Used:</h3>
+            <div id = "languagealign">
+                <div class = "languages">
+                    <div class = "image-text">
+                        <img id="python-image" src="\Images\python-logo.png" alt = "Python Logo">
+                        <h4>Python</h4>
+                    </div>
+                    <div class = "image-text">
+                        <img id="javascript-image" src="\Images\javascript-logo.png" alt = "JavaScript Logo">
+                        <h4>JavaScript</h4>
+                    </div>
+                    <div class = "image-text">
+                        <img id="Cplusplus-image" src="\Images\C++-logo.png" alt = "C++ Logo">
+                        <h4>C++</h4>
+                    </div>
+                </div>
+                <div class = "languages">
+                    <div class = "image-text">
+                        <img id="html-image" src="\Images\html-logo.webp" alt = "HTML Logo">
+                        <h4>HTML</h4>
+                    </div>
+                    <div class = "image-text">
+                        <img id="css-image" src="\Images\css-logo.webp" alt = "CSS Logo">
+                        <h4>CSS</h4>
+                    </div>
+                    <div class = "image-text">
+                        <img id="unreal-image" src="\Images\unreal-logo.jpg" alt = "Unreal Logo">
+                        <h4 id="h4altered">Blueprint visual scripting</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class = next-previous>
