--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
         <h1 class="moving">;</h1>
     </div>
 
-    <div id="shadow-image-text">
+    <div class = "image-text">
         <img id="shadow-char-image" src="\Images\shadow_realm_char.bmp" alt = "Character sheet of Shawdow Realm game">
         <div class = spaced-paras>
             <h3>Shadow Realm</h3>
@@ -39,7 +39,7 @@
         <img id="shadow-battle-image" src="\Images\shadow_realm_battle.bmp" alt = "Battle screen of Shawdow Realm game">
     </div>
 
-    <div id="mine-image-text">
+    <div class = "image-text">
         <img id="mine-bad-image" src="\Images\bad_minesweeper.bmp" alt = "Poorly crafted minesweeper">
         <div class = spaced-paras>
             <h3>Minesweeper</h3>
@@ -60,7 +60,7 @@
         <img id="mine-good-image" src="\Images\good_minesweeper.bmp" alt = "Well crafted minesweeper">
     </div>
 
-    <div id="beat-image-text">
+    <div class = "image-text">
         <img id="beat-main-image" src="\Images\drum_beat.bmp" alt = "Main screen of drum beat app">
         <div class = spaced-paras>
             <h3>Drum Beat App</h3>
