about me completed

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
         </div>
         <img id="shadow-battle-image" src="\Images\shadow_realm_battle.bmp" alt = "Battle screen of Shawdow Realm game">
     </div>
-
+    <div class = spacing></div>
     <div class = "image-text">
         <img id="mine-bad-image" src="\Images\bad_minesweeper.bmp" alt = "Poorly crafted minesweeper">
         <div class = spaced-paras>
@@ -59,7 +59,7 @@
         </div>
         <img id="mine-good-image" src="\Images\good_minesweeper.bmp" alt = "Well crafted minesweeper">
     </div>
-
+    <div class = spacing></div>
     <div class = "image-text">
         <img id="beat-main-image" src="\Images\drum_beat.bmp" alt = "Main screen of drum beat app">
         <div class = spaced-paras>
