fonts and tweaks

--- a/about.html
+++ b/about.html
@@ -27,13 +27,21 @@
     <div id="me-image-text">
         <img id="me-image" src="\Images\me_on_fence.jpg" alt = "A picture of me sat on a fence.">
         <div>
-            <p>As you can see from my picture I have always enjoyed getting out into nature on long hikes, and this is why I got into my previous job as a dog walker. </p><br>
-            <p>However when lockdown hit and I was stuck inside; I turned to my other main hobby, which is gaming. </p><br>
-            <p>No longer was I just satisfied with playing games however, now I wanted to turn my hand at creating them. </p><br>
-            <p>So I downloaded Unreal Engine 4 and got to work following along in some online tutorials for the blueprint visual scripting system. </p><br>
-            <p>Later when looking how to enter the job market with similar skills, I found a course with Code Nation that introduced me into back end coding in Python. </p><br>
-            <p>I was immediately hooked and I continued to expand my skills in Python with tools like Pygame, creating further game and apps. </p><br>
-            <p>Now I am looking to get into an apprenticeship or on the job learning, where I can expand my skills in a professional environment. </p><br>
+            <p>As you can see from my picture I have always enjoyed getting out into nature on long hikes. <br>
+            <br>
+            This is why I got into my previous job as a dog walker.</p><br>
+            
+            <p>However when lockdown hit and I was stuck inside; I turned to my other main hobby, which is gaming.<br>
+            <br>
+            No longer was I just satisfied with playing games however, now I wanted to turn my hand at creating them. </p><br>
+
+            <p>So I downloaded Unreal Engine 4 and got to work following along in some online tutorials for the blueprint visual scripting system<br>
+            <br>
+            Later when looking how to enter the job market with similar skills, I found a course with Code Nation that introduced me into back end coding in Python. </p><br>
+
+            <p>I was immediately hooked and I continued to expand my skills in Python with tools like Pygame, creating further game and apps.<br>
+            <br>
+            Now I am looking to get into an apprenticeship or on the job learning, where I can expand my skills in a professional environment. </p><br>
         </div>
     </div>
 
