--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class = "image-text">
-        <img id="code-image" src="\Images\cool-code.jpg" alt = "Coloured code on a curved computer screen"> 
+        <img id="code-image" src=".\Images\cool-code.jpg" alt = "Coloured code on a curved computer screen"> 
         <div>
             <h3>Languages Used:</h3>
             <div id = "languagealign">
