Image links updated

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/Keyboard.ico">
+    <link rel="icon" href=".\Images/Keyboard.ico">
     <link rel="stylesheet" href="style.css">
     <title>About Me</title>
 </head>
@@ -25,7 +25,7 @@
     <h3>Hi my name is Daniel Green, and I'm a software developer. </h3><br>
 
     <div id="me-image-text">
-        <img id="me-image" src="\Images\me_on_fence.jpg" alt = "A picture of me sat on a fence.">
+        <img id="me-image" src=".\Images\me_on_fence.jpg" alt = "A picture of me sat on a fence.">
         <div>
             <p>As you can see from my picture I have always enjoyed getting out into nature on long hikes. <br>
             <br>
