--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/Keyboard.ico">
+    <link rel="icon" href=".\Images/Keyboard.ico">
     <link rel="stylesheet" href="style.css">
     <title>Contact Me</title>
 </head>
@@ -25,15 +25,15 @@
 
     <div id="contact-list">
         <div class = "contacts-text">
-            <img id="google-image" src="\Images\google-mail.webp" alt = "Google Mail">
+            <img id="google-image" src=".\Images\google-mail.webp" alt = "Google Mail">
             <a class="links" href=mailto:dgreen815@gmail.com>dgreen815@gmail.com</a>
         </div>
         <div class = "contacts-text">
-            <img id="linkedin-image" src="\Images\linkedin.png" alt = "Linkedin">
+            <img id="linkedin-image" src=".\Images\linkedin.png" alt = "Linkedin">
             <a class="links" href="https://www.linkedin.com/in/daniel-green-manchester/" target="_blank" >Daniel Green Manchester</a>
         </div>
         <div class = "contacts-text">
-            <img id="github-image" src="\Images\github.png" alt = "GitHub">
+            <img id="github-image" src=".\Images\github.png" alt = "GitHub">
             <a class="links" href="https://github.com/DanoCrisis" target="_blank" >DanoCrisis</a>
         </div>
     </div>
