--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/Keyboard.ico">
+    <link rel="icon" href=".\Images/Keyboard.ico">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
@@ -33,29 +33,29 @@
             <div id = "languagealign">
                 <div class = "languages">
                     <div class = "image-text">
-                        <img id="python-image" src="\Images\python-logo.png" alt = "Python Logo">
+                        <img id="python-image" src=".\Images\python-logo.png" alt = "Python Logo">
                         <h4>Python</h4>
                     </div>
                     <div class = "image-text">
-                        <img id="javascript-image" src="\Images\javascript-logo.png" alt = "JavaScript Logo">
+                        <img id="javascript-image" src=".\Images\javascript-logo.png" alt = "JavaScript Logo">
                         <h4>JavaScript</h4>
                     </div>
                     <div class = "image-text">
-                        <img id="Cplusplus-image" src="\Images\C++-logo.png" alt = "C++ Logo">
+                        <img id="Cplusplus-image" src=".\Images\C++-logo.png" alt = "C++ Logo">
                         <h4>C++</h4>
                     </div>
                 </div>
                 <div class = "languages">
                     <div class = "image-text">
-                        <img id="html-image" src="\Images\html-logo.webp" alt = "HTML Logo">
+                        <img id="html-image" src=".\Images\html-logo.webp" alt = "HTML Logo">
                         <h4>HTML</h4>
                     </div>
                     <div class = "image-text">
-                        <img id="css-image" src="\Images\css-logo.webp" alt = "CSS Logo">
+                        <img id="css-image" src=".\Images\css-logo.webp" alt = "CSS Logo">
                         <h4>CSS</h4>
                     </div>
                     <div class = "image-text">
-                        <img id="unreal-image" src="\Images\unreal-logo.jpg" alt = "Unreal Logo">
+                        <img id="unreal-image" src=".\Images\unreal-logo.jpg" alt = "Unreal Logo">
                         <h4 id="h4altered">Blueprint visual scripting</h4>
                     </div>
                 </div>
