--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/Keyboard.ico">
+    <link rel="icon" href=".\Images/Keyboard.ico">
     <link rel="stylesheet" href="style.css">
     <title>Projects</title>
 </head>
@@ -22,7 +22,7 @@
     </div>
 
     <div class = "image-text">
-        <img id="shadow-char-image" src="\Images\shadow_realm_char.bmp" alt = "Character sheet of Shawdow Realm game">
+        <img id="shadow-char-image" src=".\Images\shadow_realm_char.bmp" alt = "Character sheet of Shawdow Realm game">
         <div class = spaced-paras>
             <h3>Shadow Realm</h3>
             <p>After completing an introductory course on Python, I was eager to test out my new found skills and create a text based game with greater scope than I had previously.<br> 
@@ -36,11 +36,11 @@
             Ultimately it lies unfinished, as I decided to move on to more complex systems, but building what I did of Shadow Realm taught me a lot about how different systems within Python interact.
             </p>
         </div>
-        <img id="shadow-battle-image" src="\Images\shadow_realm_battle.bmp" alt = "Battle screen of Shawdow Realm game">
+        <img id="shadow-battle-image" src=".\Images\shadow_realm_battle.bmp" alt = "Battle screen of Shawdow Realm game">
     </div>
     <div class = spacing></div>
     <div class = "image-text">
-        <img id="mine-bad-image" src="\Images\bad_minesweeper.bmp" alt = "Poorly crafted minesweeper">
+        <img id="mine-bad-image" src=".\Images\bad_minesweeper.bmp" alt = "Poorly crafted minesweeper">
         <div class = spaced-paras>
             <h3>Minesweeper</h3>
             <p>After creating a text based game, I wanted to create something with some improved visuals. So I found an instructional video on creating the windows minesweeper game using the module pygame.<br> 
@@ -57,11 +57,11 @@
             This project really showcased how I can pick up new skills quickly, look at problems that are still to be overcome and find creative solutions in order to solve them.
             </p>
         </div>
-        <img id="mine-good-image" src="\Images\good_minesweeper.bmp" alt = "Well crafted minesweeper">
+        <img id="mine-good-image" src=".\Images\good_minesweeper.bmp" alt = "Well crafted minesweeper">
     </div>
     <div class = spacing></div>
     <div class = "image-text">
-        <img id="beat-main-image" src="\Images\drum_beat.bmp" alt = "Main screen of drum beat app">
+        <img id="beat-main-image" src=".\Images\drum_beat.bmp" alt = "Main screen of drum beat app">
         <div class = spaced-paras>
             <h3>Drum Beat App</h3>
             <p>Not wanting to focus entirely on games and also wanting to bring some sound into my projects; a beat maker app seemed like the next logical step.<br> 
@@ -73,7 +73,7 @@
             However I learned lots of new skills by completing this project, including saving and loading data to an outside file, creating a none static image and of course introducing some sounds to the program. <br>
             </p>
         </div>
-        <img id="beat-menu-image" src="\Images\drum_menu.bmp" alt = "Menu screen of drum beat app">
+        <img id="beat-menu-image" src=".\Images\drum_menu.bmp" alt = "Menu screen of drum beat app">
     </div>
 
     <div class = next-previous>
